--- a/frigate/config.yml
+++ b/frigate/config.yml
@@ -149,8 +149,8 @@ record:
       - hair drier
       - toothbrush
       - hair brush
-    # Optional: Restrict recordings to objects that entered any of the listed zones (default: no required zones)
-    required_zones: []
+    # # Optional: Restrict recordings to objects that entered any of the listed zones (default: no required zones)
+    # required_zones: []
     # Optional: Retention settings for recordings of events
     retain:
       # Required: Default retention days (default: shown below)
