--- a/grafana/compose.yml
+++ b/grafana/compose.yml
@@ -7,6 +7,8 @@ services:
       - /data/grafana:/var/lib/grafana
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
+    env_file:
+      - .env
     labels:
       - "traefik.backend=___APP_NAME___"
       - "traefik.docker.network=webproxy"
