--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "files.associations": {
         "traefik.yml": "ansible"
       },
-      "ansible.python.interpreterPath": "/bin/python3"
+      "ansible.python.interpreterPath": "/bin/python3",
+      "cSpell.words": [
+        "datasources"
+      ]
 }
