--- a/grafana/.env
+++ b/grafana/.env
@@ -1,3 +1,5 @@
 # https://grafana.com/docs/grafana/latest/setup-grafana/configure-grafana/#override-configuration-with-environment-variables
 
 GF_SECURITY_ALLOW_EMBEDDING=true
+GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+#GF_SECURITY_ADMIN_PASSWORD=admin
