--- a/grafana/promtail/config.yml
+++ b/grafana/promtail/config.yml
@@ -16,3 +16,10 @@ scrape_configs:
     labels:
       job: varlogs
       __path__: /var/log/*log
+- job_name: docker
+  static_configs:
+    - targets:
+        - localhost
+      labels:
+        job: docker_logs
+        __path__: /var/lib/docker/containers/*/*-json.log
