--- a/grafana/promtail/config.yml
+++ b/grafana/promtail/config.yml
@@ -23,3 +23,61 @@ scrape_configs:
       labels:
         job: docker_logs
         __path__: /var/lib/docker/containers/*/*-json.log
+  pipeline_stages:
+
+  # This stage is only going to run if the scraped target has a label
+  # of "name" with value "promtail".
+  - match:
+      selector: '{logger="promtail"}'
+      stages:
+      # The regex stage parses out a level, timestamp, and component. At the end
+      # of the stage, the values for level, timestamp, and component are only
+      # set internally for the pipeline. Future stages can use these values and
+      # decide what to do with them.
+      - regex:
+          expression: '.*level=(?P<level>[a-zA-Z]+).*ts=(?P<timestamp>[T\d-:.Z]*).*component=(?P<component>[a-zA-Z]+)'
+
+      # The labels stage takes the level and component entries from the previous
+      # regex stage and promotes them to a label. For example, level=error may
+      # be a label added by this stage.
+      - labels:
+          level:
+          component:
+
+      # Finally, the timestamp stage takes the timestamp extracted from the
+      # regex stage and promotes it to be the new timestamp of the log entry,
+      # parsing it as an RFC3339Nano-formatted value.
+      - timestamp:
+          format: RFC3339Nano
+          source: timestamp
+
+  # This stage is only going to run if the scraped target has a label of
+  # "name" with a value of "nginx" and if the log line contains the word "GET"
+  - match:
+      selector: '{name="nginx"} |= "GET"'
+      stages:
+      # This regex stage extracts a new output by matching against some
+      # values and capturing the rest.
+      - regex:
+          expression: \w{1,3}.\w{1,3}.\w{1,3}.\w{1,3}(?P<output>.*)
+
+      # The output stage changes the content of the captured log line by
+      # setting it to the value of output from the regex stage.
+      - output:
+          source: output
+
+  # This stage is only going to run if the scraped target has a label of
+  # "name" with a value of "jaeger-agent".
+  - match:
+      selector: '{name="jaeger-agent"}'
+      stages:
+      # The JSON stage reads the log line as a JSON string and extracts
+      # the "level" field from the object for use in further stages.
+      - json:
+          expressions:
+            level: level
+
+      # The labels stage pulls the value from "level" that was extracted
+      # from the previous stage and promotes it to a label.
+      - labels:
+          level:
