--- a/pihole/compose.yml
+++ b/pihole/compose.yml
@@ -3,9 +3,15 @@ services:
   pihole:
     container_name: "pihole"
     image: "pihole/pihole:latest"
-    ports:
-      - "53:53/tcp"
-      - "53:53/udp"
+    # ports:
+    #   - "53:53/tcp"
+    #   - "53:53/udp"
+      # Default HTTP Port
+      # - "80:80/tcp"
+      # # Default HTTPs Port. FTL will generate a self-signed certificate
+      # - "443:443/tcp"
+      # Uncomment the below if using Pi-hole as your DHCP Server
+      #- "67:67/udp"
     environment:
       TZ: "Europe/Amsterdam"
       WEBPASSWORD: "___WEBPASSWORD___"
@@ -23,6 +29,10 @@ services:
       - "traefik.port=80"
       - "traefik.default.protocol=http"
       - "traefik.http.services.pihole.loadbalancer.server.port=80"
+      - "traefik.tcp.services.pihole.loadbalancer.server.port=53"
+      - "traefik.udp.routers.dns-udp.entrypoints=dns-udp"
+      - "traefik.udp.routers.dns-udp.service=pihole"
+      - "traefik.udp.services.pihole.loadbalancer.server.port=53"
     networks:
       - "local"
       - "public"
