- update docs - remove oboslete commented pihole ports - Fix issue where OpenWrt could not upload the file

--- a/miscelaneous/migrate.yml
+++ b/miscelaneous/migrate.yml
@@ -68,4 +68,4 @@
         state: stopped
 
 - name: Home Assistant
-  ansible.builtin.import_playbook: home-assistant.yml
+  ansible.builtin.import_playbook: ../home-assistant/playbook.yml
